update ilo checks

--- a/files/commands/plugin-check_ilo2_health.cfg
+++ b/files/commands/plugin-check_ilo2_health.cfg
@@ -1,5 +1,52 @@
 # Check HP ILO 2/3/4
 define command {
     command_name check_ilo2_health
-    command_line /usr/bin/perl $USER1$/check_ilo2_health.pl --sslopts 'SSL_verify_mode => SSL_VERIFY_NONE, SSL_version => "TLSv1"' -H $ARG1$ -u Administrator -p 'frb$ilo$1999' -c -a -b -o -d
+    command_line /usr/bin/perl $USER1$/check_ilo2_health.pl --sslopts 'SSL_verify_mode => SSL_VERIFY_NONE, SSL_version => "TLSv1"' -H $ARG1$ -u $ARG2$ -p '$ARG3$' -c -a -b -o -d
 }
+define command {
+    command_name check_ilo3_health
+    command_line /usr/bin/perl $USER1$/check_ilo2_health.pl --sslopts 'SSL_verify_mode => SSL_VERIFY_NONE, SSL_version => "TLSv1"' -H $ARG1$ -u $ARG2$ -p '$ARG3$' -c -a -b -o -d --ilo3
+}
+
+# Template definition in service: 
+
+define service {
+    service_description     template_servers_hp_ilo2
+    check_command           check_ilo2_health!$_HOSTILO_ADDRESS$!$_HOSTILO_USER!$_HOSTILO_PASSWORD$
+    notes_url               https://$_HOSTILO_ADDRESS$
+    notes                   ILO IP Address: $_HOSTILO_ADDRESS$
+    register                0
+    use                     generic-service
+}
+
+define service {
+    service_description     template_servers_hp_ilo3
+    check_command           check_ilo3_health!$_HOSTILO_ADDRESS$!$_HOSTILO_USER!$_HOSTILO_PASSWORD$
+    notes_url               https://$_HOSTILO_ADDRESS$
+    notes                   ILO IP Address: $_HOSTILO_ADDRESS$
+    register                0
+    use                     generic-service
+}
+
+# Example for service: 
+
+# define service {
+#    hostgroup_name          servers_hp_ilo3
+#    service_description     Check HP ILO Status
+#    servicegroups           check_hp_services
+#    use                     template_servers_hp_ilo3
+#}
+
+# Example host definition:
+
+# define host{
+#	host_name		SOMENAME
+#   hostgroups      servers_hp_ilo3,someothergroup
+#	alias 			SOME ALIAS 
+#	parents			SOMEPARENT
+#	use			    some_template
+#	_ilo_address    X.X.X.X
+#   _ilo_user       username
+#   _ilo_password   password
+#}
+
