--- a/files/commands/plugins-check_cisco_commands.cfg
+++ b/files/commands/plugins-check_cisco_commands.cfg
@@ -25,14 +25,14 @@ define command{
 ##MEM STATUS FOR CISCO
 define command{
 	command_name	check_snmp_cisco_memory
-	command_line	/usr/bin/perl /usr/lib/nagios/plugins/check_snmp_cisco_memory -H $HOSTADDRESS$ -C $ARG1$ -w 90 -c 95
+	command_line	/usr/bin/perl /usr/lib/nagios/plugins/check_snmp_cisco_memory.pl -H $HOSTADDRESS$ -C $ARG1$ -w 90 -c 95
 }
 
 ##MEM STATUS FOR CISCO with _SNMPRO macro
 ##https://assets.nagios.com/downloads/nagioscore/docs/nagioscore/4/en/macros.html
 define command{
 	command_name	check_snmp_cisco_memory_snmpro_macro
-	command_line	/usr/bin/perl /usr/lib/nagios/plugins/check_snmp_cisco_memory -H $HOSTADDRESS$ -C $_HOSTSNMPRO$ -w 90 -c 95
+	command_line	/usr/bin/perl /usr/lib/nagios/plugins/check_snmp_cisco_memory.pl -H $HOSTADDRESS$ -C $_HOSTSNMPRO$ -w 90 -c 95
 }
 
 
