refactor nagios4_plugins

--- a/templates/commands/plugin-check_ilo2_health.cfg
+++ b/templates/commands/plugin-check_ilo2_health.cfg
@@ -8,6 +8,11 @@ define command {
     command_line /usr/bin/perl $USER1$/check_ilo2_health.pl --sslopts 'SSL_verify_mode => SSL_VERIFY_NONE, SSL_version => "TLSv1"' -H $ARG1$ -u $ARG2$ -p '$ARG3$' -c -a -b -o -d --ilo3
 }
 
+define command{
+	command_name check_ilo_mod
+	command_line /usr/bin/perl {{ nagios_plugins_dir }}/check_ilo2_health.pl -u $ARG1$ -p $ARG2$ -H $ARG3$ -n -3
+}
+
 # Template definition in service: 
 
 define service {
