--- a/templates/commands/plugin-check_snmp_printer.cfg
+++ b/templates/commands/plugin-check_snmp_printer.cfg
@@ -3,6 +3,6 @@
 
 define command{
 	command_name	check_snmp_printer
-	command_line	/usr/lib/nagios/plugins/check_snmp_printer -H '$HOSTADDRESS$' -C public -x $ARG1$ -w 5 -c 3
+	command_line	{{ nagios_plugins_dir }}/check_snmp_printer -H '$HOSTADDRESS$' -C public -x $ARG1$ -w 5 -c 3
 	}
 
