--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,3 +3,13 @@
 check_url_proxy_server: 'proxy_server'
 check_url_proxy_user: 'proxy_user'
 check_url_proxy_password: 'proxy_password'
+
+
+nagios_etc: '/usr/local/nagios/etc'
+nagios_config_cfg_dir: "{{ nagios_etc }}/conf.d"
+nagios_config_cfg_plugins: "{{ nagios_config_cfg_dir }}/plugins"
+nagios_plugins_dir: '/usr/lib/nagios/plugins/'
+
+nagios_version: 4
+nagios_config_file: "{{ nagios_etc }}/nagios.cfg"
+nagios_cgi_file: "{{ nagios_etc }}/cgi.cfg"
