--- a/tasks/config_plugins.yml
+++ b/tasks/config_plugins.yml
@@ -11,24 +11,34 @@
     - update-notifier-common # Required for check_nrpe_os_update
     - snmp
 
-- name: create plugins directory
-  file: 'path={{ nagios_config_cfg_dir }}/plugins owner=root group=root mode=755 state=directory'
+- name: create plugins directory for plugins libs
+  file: 'path={{ nagios_plugins_dir }} owner=root group=root mode=755 state=directory'
 
-- name: Install Plugins
+- name: Install plugins on plugins dir
   copy: 'src=plugins/ dest={{ nagios_plugins_dir }} owner=root group=root mode=755'
 
-- name: Configure Plugins
+- name: create plugins directory for commands cfg
+  file: 'path={{ nagios_config_cfg_plugins }} owner=nagios group=nagios mode=775 state=directory'
+
+- name: configure the commands for plugins
+  template:
+    src: "{{ item }}"
+    dest: "{{ nagios_config_cfg_plugins }}/{{ item }}"
+    owner: 'nagios'
+    group: 'nagios'
+    mode: 0644
+  with_fileglob:
+    - "commands/*"
+  notify: Reload Nagios
+
+- name: Configure additional plugins
   template: 
     src: '{{ item.src }}'
-    dest: '{{ nagios_config_cfg_dir }}/plugins/{{ item.dest }}'
-    owner: 'root'
-    group: 'root'
+    dest: '{{ nagios_config_cfg_plugins }}/{{ item.dest }}'
+    owner: 'nagios'
+    group: 'nagios'
     mode: 0644
   with_items:
     - { src: 'check_nrpe.cfg.j2', dest: 'check_nrpe.cfg' }
-    - { src: 'plugin-check_url_status.cfg.j2', dest: "plugin-check_url_status.cfg.j2" }
-  notify: Reload Nagios
-
-- name: Configure commands for Plugins
-  copy: 'src=commands/ dest={{ nagios_config_cfg_dir }}/plugins/ owner=root group=root mode=755'
+    - { src: 'plugin-check_url_status.cfg.j2', dest: "plugin-check_url_status.cfg" }
   notify: Reload Nagios
