--- a/templates/commands/plugin-check_procs.cfg
+++ b/templates/commands/plugin-check_procs.cfg
@@ -1,26 +1,26 @@
 # 'check_procs' command definition
 define command{
         command_name    check_procs
-        command_line    /usr/lib/nagios/plugins/check_procs -w '$ARG1$' -c '$ARG2$'
+        command_line    {{ nagios_plugins_dir }}/check_procs -w '$ARG1$' -c '$ARG2$'
         }
 
 
 # 'check_procs_zombie' command definition
 define command{
         command_name    check_procs_zombie
-        command_line    /usr/lib/nagios/plugins/check_procs -w '$ARG1$' -c '$ARG2$' -s Z
+        command_line    {{ nagios_plugins_dir }}/check_procs -w '$ARG1$' -c '$ARG2$' -s Z
         }
 
 
 # 'check_procs_httpd' command definition
 define command{
         command_name    check_procs_httpd
-        command_line    /usr/lib/nagios/plugins/check_procs -w 5:'$ARG1$' -c 1:'$ARG2$' -C httpd
+        command_line    {{ nagios_plugins_dir }}/check_procs -w 5:'$ARG1$' -c 1:'$ARG2$' -C httpd
         }
 
 # 'check_procs_command' command definition
 # Example: -w 1:1 -c 1:5 -C npcd
 define command{
         command_name    check_procs_command
-        command_line    /usr/lib/nagios/plugins/check_procs -w '$ARG1$' -c '$ARG2$' -C '$ARG3$'
+        command_line    {{ nagios_plugins_dir }}/check_procs -w '$ARG1$' -c '$ARG2$' -C '$ARG3$'
         }
