plugin check_snmp_print versions

--- a/templates/commands/plugin-check_snmp_printer.cfg
+++ b/templates/commands/plugin-check_snmp_printer.cfg
@@ -4,5 +4,19 @@
 define command{
 	command_name	check_snmp_printer
 	command_line	{{ nagios_plugins_dir }}/check_snmp_printer -H '$HOSTADDRESS$' -C public -x $ARG1$ -w 5 -c 3
-	}
+}
 
+define command{
+	command_name	check_snmp_printer_4
+	command_line	{{ nagios_plugins_dir }}/check_snmp_printer_4 -H '$HOSTADDRESS$' -C public -t $ARG1$ -w 5 -c 3
+}
+
+define command{
+	command_name	check_snmp_printer_4_model
+	command_line	{{ nagios_plugins_dir }}/check_snmp_printer_4 -H '$HOSTADDRESS$' -C public -t MODEL
+}
+
+define command{
+	command_name	check_snmp_printer_4_c
+	command_line	{{ nagios_plugins_dir }}/check_snmp_printer_4 -H '$HOSTADDRESS$' -C $ARG1$ -t $ARG2$ -w 5 -c 3
+}
