update check path

--- a/templates/commands/plugin-check_snmp_nelmon_cisco.cfg
+++ b/templates/commands/plugin-check_snmp_nelmon_cisco.cfg
@@ -3,19 +3,19 @@
 # Check all interfaces admin up oper down
 define command{
 	command_name check_cisco_admin_up
-	command_line  nm_check_admin_up_oper_down  -P 2c -H $HOSTADDRESS$ -c -C $ARG1$
+	command_line  /usr/local/bin/nm_check_admin_up_oper_down -P 2c -H $HOSTADDRESS$ -c -C $ARG1$
 }
 
 # Check all interfaces admin up oper down by interface ifDesc regex
 define command{
 	command_name check_cisco_admin_up_if_desc
-	command_line  nm_check_admin_up_oper_down  -P 2c -H $HOSTADDRESS$ -c -C $ARG1$ -d $ARG2$
+	command_line  /usr/local/bin/nm_check_admin_up_oper_down -P 2c -H $HOSTADDRESS$ -c -C $ARG1$ -d $ARG2$
 }
 
 # Check all interfaces admin up oper down by interface ifAlias regex
 define command{
 	command_name check_cisco_admin_up_if_alias
-	command_line  nm_check_admin_up_oper_down  -P 2c -H $HOSTADDRESS$ -c -C $ARG1$ -al $ARG2$
+	command_line  /usr/local/bin/nm_check_admin_up_oper_down -P 2c -H $HOSTADDRESS$ -c -C $ARG1$ -al $ARG2$
 }
 
 define service {
@@ -23,6 +23,7 @@ define service {
 	service_description	    check_all_interfaces_admin_up_template
 	check_command		    check_cisco_admin_up!public
 	use				        generic-service
+	notes                   Check all enabled interfaces
 	register                0
 }
 
@@ -30,8 +31,7 @@ define service {
 	#hostgroup			    sw-access
 	service_description	    check_all_interfaces_admin_up_alias_template
 	check_command		    check_cisco_admin_up_if_alias!public!'UPLINK'
+	notes                   Checks only interfaces with alias: UPLINK on its description line
 	use				        generic-service
 	register                0
 }
-
-
