--- a/templates/commands/plugin-check_snmp_nelmon_cisco.cfg
+++ b/templates/commands/plugin-check_snmp_nelmon_cisco.cfg
@@ -6,6 +6,12 @@ define command{
 	command_line  /usr/local/bin/nm_check_admin_up_oper_down -P 2c -H $HOSTADDRESS$ -c -C $ARG1$
 }
 
+# Check all interfaces admin up oper down ignore some
+define command{
+	command_name check_cisco_admin_up_ignore_ifdescr
+	command_line  /usr/local/bin/nm_check_admin_up_oper_down -P 2c -H $HOSTADDRESS$ -c -C $ARG1$ -ia $ARG3$
+}
+
 # Check all interfaces admin up oper down by interface ifDesc regex
 define command{
 	command_name check_cisco_admin_up_if_desc
@@ -17,6 +23,7 @@ define command{
 	command_name check_cisco_admin_up_if_alias
 	command_line  /usr/local/bin/nm_check_admin_up_oper_down -P 2c -H $HOSTADDRESS$ -c -C $ARG1$ -al $ARG2$
 }
+
 
 define service {
 	#hostgroup			    sw-distribution
