--- a/templates/commands/plugin-check_jenkins.cfg
+++ b/templates/commands/plugin-check_jenkins.cfg
@@ -9,13 +9,13 @@
 # Note : we have ssl ON by default
 define command{
     command_name    check_jenkins_job
-    command_line    $USER2$/check_jenkins.py -S -H $HOSTNAME$ -j $ARG1$ -w $ARG2$ -c $ARG3$ -u $ARG4$ -p $ARG5$ 
+    command_line    {{ nagios_plugins_dir }}/check_jenkins.py -S -H $HOSTNAME$ -j $ARG1$ -w $ARG2$ -c $ARG3$ -u $ARG4$ -p $ARG5$ 
 }
 
 # check Jenkins job without ssl
 define command{
     command_name    check_jenkins_job_nonssl
-    command_line    $USER2$/check_jenkins.py -H $HOSTNAME$ -j $ARG1$ -w $ARG2$ -c $ARG3$ -u $ARG4$ -p $ARG5$ 
+    command_line    {{ nagios_plugins_dir }}/check_jenkins.py -H $HOSTNAME$ -j $ARG1$ -w $ARG2$ -c $ARG3$ -u $ARG4$ -p $ARG5$ 
 }
 
 # check Jenkins lastsuccess job 
@@ -26,11 +26,11 @@ define command{
 # -c: 40d 
 define command{
     command_name    check_jenkins_job_lsb
-    command_line    $USER2$/check_jenkins_lsb.py -S -H $HOSTNAME$ -j $ARG1$ -w $ARG2$ -c $ARG3$ -u $ARG4$ -p $ARG5$ 
+    command_line    {{ nagios_plugins_dir }}/check_jenkins_lsb.py -S -H $HOSTNAME$ -j $ARG1$ -w $ARG2$ -c $ARG3$ -u $ARG4$ -p $ARG5$ 
 }
 
 # Check Jenkins lastsuccess Job without SSL
 define command{
     command_name    check_jenkins_job_lsb_nonssl
-    command_line    $USER2$/check_jenkins_lsb.py -H $HOSTNAME$ -j $ARG1$ -w $ARG2$ -c $ARG3$ -u $ARG4$ -p $ARG5$ 
+    command_line    {{ nagios_plugins_dir }}/check_jenkins_lsb.py -H $HOSTNAME$ -j $ARG1$ -w $ARG2$ -c $ARG3$ -u $ARG4$ -p $ARG5$ 
 }
