fix missing port number and required python executable

--- a/templates/commands/plugin-check_jenkins.cfg
+++ b/templates/commands/plugin-check_jenkins.cfg
@@ -9,13 +9,13 @@
 # Note : we have ssl ON by default
 define command{
     command_name    check_jenkins_job
-    command_line    {{ nagios_plugins_dir }}/check_jenkins.py -S -H $HOSTNAME$ -j $ARG1$ -w $ARG2$ -c $ARG3$ -u $ARG4$ -p $ARG5$ 
+    command_line    python {{ nagios_plugins_dir }}/check_jenkins.py -S -H $HOSTNAME$ -j $ARG1$ -w $ARG2$ -c $ARG3$ -u $ARG4$ -p $ARG5$ 
 }
 
 # check Jenkins job without ssl
 define command{
     command_name    check_jenkins_job_nonssl
-    command_line    {{ nagios_plugins_dir }}/check_jenkins.py -H $HOSTNAME$ -j $ARG1$ -w $ARG2$ -c $ARG3$ -u $ARG4$ -p $ARG5$ 
+    command_line    python {{ nagios_plugins_dir }}/check_jenkins.py -H $HOSTNAME$ -j $ARG1$ -w $ARG2$ -c $ARG3$ -P $ARG4$ -u $ARG5$ -p $ARG6$ 
 }
 
 # check Jenkins lastsuccess job 
@@ -24,13 +24,14 @@ define command{
 # example:
 # -w: 30d
 # -c: 40d 
+# -P: Portnumber
 define command{
     command_name    check_jenkins_job_lsb
-    command_line    {{ nagios_plugins_dir }}/check_jenkins_lsb.py -S -H $HOSTNAME$ -j $ARG1$ -w $ARG2$ -c $ARG3$ -u $ARG4$ -p $ARG5$ 
+    command_line    python {{ nagios_plugins_dir }}/check_jenkins_lsb.py -S -H $HOSTNAME$ -j $ARG1$ -w $ARG2$ -c $ARG3$ -u $ARG4$ -p $ARG5$ 
 }
 
 # Check Jenkins lastsuccess Job without SSL
 define command{
     command_name    check_jenkins_job_lsb_nonssl
-    command_line    {{ nagios_plugins_dir }}/check_jenkins_lsb.py -H $HOSTNAME$ -j $ARG1$ -w $ARG2$ -c $ARG3$ -u $ARG4$ -p $ARG5$ 
+    command_line    python {{ nagios_plugins_dir }}/check_jenkins_lsb.py -H $HOSTNAME$ -j $ARG1$ -w $ARG2$ -c $ARG3$ -P $ARG4$ -u $ARG5$ -p $ARG6$ 
 }
