update to git module in ansible

--- a/tasks/config_plugins.yml
+++ b/tasks/config_plugins.yml
@@ -17,8 +17,9 @@
     - skip-ansible-lint
 
 - name: Install plugins from pip packages
-  command: pip2 install --upgrade {{ item }}
-  changed_when: false
+  pip: 
+    name: {{ item }}
+    executable: pip2
   with_items:
     - "git+https://github.com/pablodav/nelmon.git"
   tags:
