--- a/tasks/config_plugins.yml
+++ b/tasks/config_plugins.yml
@@ -18,7 +18,7 @@
 
 - name: Install plugins from pip packages
   pip: 
-    name: {{ item }}
+    name: "{{ item }}"
     executable: pip2
   with_items:
     - "git+https://github.com/pablodav/nelmon.git"
