revert config_plugins to previous commit

--- a/tasks/config_plugins.yml
+++ b/tasks/config_plugins.yml
@@ -17,9 +17,8 @@
     - skip-ansible-lint
 
 - name: Install plugins from pip packages
-  pip: 
-    name: "{{ item }}"
-    executable: pip2
+  command: pip2 install --upgrade {{ item }}
+  changed_when: false
   with_items:
     - "git+https://github.com/pablodav/nelmon.git"
   tags:
