--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -13,3 +13,11 @@ nagios_plugins_dir: '/usr/lib/nagios/plugins'
 nagios_version: 4
 nagios_config_file: "{{ nagios_etc }}/nagios.cfg"
 nagios_cgi_file: "{{ nagios_etc }}/cgi.cfg"
+
+nagios_plugins_pip3_packages:
+    - "nagios_sql>=0.5.0"
+
+nagios_plugins_pip2_packages:
+    - "--upgrade git+https://github.com/pablodav/nelmon.git"    
+
+nagios_plugins_required_pip: "pip>=9.0.1"
