fix nagios_sql command

--- a/templates/commands/plugin-check_nagios_sql.cfg
+++ b/templates/commands/plugin-check_nagios_sql.cfg
@@ -9,7 +9,7 @@
 # standard way to define a command
 define command{
     command_name    check_nagios_sql
-    command_line    nagios_sql -H $HOSTADDRESS$ -U $ARG1$ -P $ARG2$ -t $ARG3$
+    command_line    /usr/local/bin/nagios_sql -H $HOSTADDRESS$ -U $ARG1$ -P $ARG2$ -t $ARG3$
 }
 
 # this other custom settings will allow you to parse any argument
@@ -17,5 +17,5 @@ define command{
 # command  check_nagios_sql_custom!"-U 'USERNAME' -P 'PASSWORD' -t replication_status"
 define command{
     command_name    check_nagios_sql_custom
-    command_line    nagios_sql -H $HOSTADDRESS$ $ARG1$
+    command_line    /usr/local/bin/nagios_sql -H $HOSTADDRESS$ $ARG1$
 }
