added check_esx_wbem.py file

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -19,6 +19,7 @@ nagios_plugins_pip3_packages:
 
 nagios_plugins_pip2_packages:
     - "--upgrade git+https://github.com/pablodav/nelmon.git"    
+    - "pywbem"
 
 nagios_plugins_required_pip: "pip>=9.0.1"
 
