added check_esx_wbem.py file

--- a/tasks/config_plugins.yml
+++ b/tasks/config_plugins.yml
@@ -12,6 +12,7 @@
     - snmp
     - python-pip
     - python3-pip
+    - python-pywbem # required for check_esx_wbem.py
 
 - name: upgrade pip
   command: "pip install {{ nagios_plugins_required_pip }}"
