--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -19,7 +19,8 @@ nagios_plugins_pip3_packages:
 
 nagios_plugins_pip2_packages:
     - "--upgrade git+https://github.com/pablodav/nelmon.git"    
-    - "pywbem"
+    #- "pywbem"  # required for https://exchange.nagios.org/directory/Plugins/Operating-Systems/%2A-Virtual-Environments/VMWare/Check-hardware-running-VMware-ESXi/details#_ga=2.89786515.94408166.1497532407-2035280105.1475087624
+
 
 nagios_plugins_required_pip: "pip>=9.0.1"
 
