--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -18,9 +18,20 @@ nagios_plugins_pip3_packages:
     - "nagios_sql>=0.5.0"
 
 nagios_plugins_pip2_packages:
-    - "--upgrade git+https://github.com/pablodav/nelmon.git"    
-    #- "pywbem"  # required for https://exchange.nagios.org/directory/Plugins/Operating-Systems/%2A-Virtual-Environments/VMWare/Check-hardware-running-VMware-ESXi/details#_ga=2.89786515.94408166.1497532407-2035280105.1475087624
+    - "--upgrade git+https://github.com/pablodav/nelmon.git"
+    - "M2Crypto>=0.26.0" # required for check_esxi_wbem.py
+    - "pywbem>=0.10.0"  # required for https://exchange.nagios.org/directory/Plugins/Operating-Systems/%2A-Virtual-Environments/VMWare/Check-hardware-running-VMware-ESXi/details#_ga=2.89786515.94408166.1497532407-2035280105.1475087624
 
+nagios_plugins_apt_packages:
+    - libnet-dns-perl  # required for check_iftraffic43a.pl
+    - libnagios-plugin-perl # required for hp ilo
+    - libxml-simple-perl # required for hp ilo
+    - php5-sybase # required for check_mssql.php
+    - update-notifier-common # Required for check_nrpe_os_update
+    - snmp
+    - python-pip
+    - python3-pip
+    - python-dev  # required for m2crypto
 
 nagios_plugins_required_pip: "pip>=9.0.1"
 
