--- a/tasks/config_plugins.yml
+++ b/tasks/config_plugins.yml
@@ -3,16 +3,8 @@
 
 - name: Install Plugins dependencies
   package: name={{ item }} state=present
-  with_items:
-    - libnet-dns-perl  # required for check_iftraffic43a.pl
-    - libnagios-plugin-perl # required for hp ilo
-    - libxml-simple-perl # required for hp ilo
-    - php5-sybase # required for check_mssql.php
-    - update-notifier-common # Required for check_nrpe_os_update
-    - snmp
-    - python-pip
-    - python3-pip
-    - python-pywbem # required for check_esx_wbem.py
+  with_items: "{{ nagios_plugins_apt_packages }}"
+
 
 - name: upgrade pip
   command: "pip install {{ nagios_plugins_required_pip }}"
