--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ install:
   - pip install molecule
   # - pip install required driver (e.g. docker, python-vagrant, shade)
   - pip install docker
+  - ansible-galaxy install -r requirements.yml
 script:
   #- molecule test
   - molecule create
