--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -24,11 +24,12 @@ nagios_plugins_pip2_packages:
     - "pywbem>=0.10.0"  # required for https://exchange.nagios.org/directory/Plugins/Operating-Systems/%2A-Virtual-Environments/VMWare/Check-hardware-running-VMware-ESXi/details#_ga=2.89786515.94408166.1497532407-2035280105.1475087624
 
 nagios_plugins_apt_packages:
+    - git
     - libnet-dns-perl  # required for check_iftraffic43a.pl
     - libnagios-plugin-perl # required for hp ilo
     - libxml-simple-perl # required for hp ilo
     - php5-sybase # required for check_mssql.php
-    - update-notifier-common # Required for check_nrpe_os_update
+    #- update-notifier-common # Required for check_nrpe_os_update (only use it on client ubuntu, doesn't works on debian)
     - snmp
     - python-pip
     - python3-pip
