--- a/templates/commands/check_nrpe_filemin.cfg
+++ b/templates/commands/check_nrpe_filemin.cfg
@@ -1,4 +1,4 @@
 define command{
         command_name    check_nrpe_file_min
-        command_line	{{ nagios_plugins_dir }}/check_nrpe -H $HOSTADDRESS$ -p 5666 -c CheckFiles -a path=$ARG1$ pattern=$ARG2$ filter="written gt"$ARG3$ max-dir-depth=3 "syntax=%filename% - %write%" MinCrit=0
+        command_line	{{ nagios_plugins_dir }}/check_nrpe -H $HOSTADDRESS$ -p {{ nagios_config_commands_nrpe_port }} -c CheckFiles -a path=$ARG1$ pattern=$ARG2$ filter="written gt"$ARG3$ max-dir-depth=3 "syntax=%filename% - %write%" MinCrit=0
 }
