--- a/templates/commands/check_jonschipp.cfg
+++ b/templates/commands/check_jonschipp.cfg
@@ -12,10 +12,10 @@ define command{
 
 define command{
         command_name  check_service_nrpe
-        command_line  {{ nagios_plugins_dir }}/check_nrpe -H $HOSTADDRESS$ -p 5666 -c check_service -a $ARG1$
+        command_line  {{ nagios_plugins_dir }}/check_nrpe -H $HOSTADDRESS$ -p {{ nagios_config_commands_nrpe_port }} -c check_service -a $ARG1$
 }
 
 define command{
         command_name  check_jonschipp_commands_nrpe
-        command_line  {{ nagios_plugins_dir }}/check_nrpe -H $HOSTADDRESS$ -p 5666 -c check_jonschipp -a $ARG1$ $ARG2$
+        command_line  {{ nagios_plugins_dir }}/check_nrpe -H $HOSTADDRESS$ -p {{ nagios_config_commands_nrpe_port }} -c check_jonschipp -a $ARG1$ $ARG2$
 }
