--- a/templates/commands/check_nrpe_mem.cfg
+++ b/templates/commands/check_nrpe_mem.cfg
@@ -1,4 +1,4 @@
 define command {
 	command_name	check_nrpe_mem
-	command_line	{{ nagios_plugins_dir }}/check_nrpe -H $HOSTADDRESS$ -p 5666 -c CheckMEM -a MinWarn=$ARG1$ MinCrit=$ARG2$ ShowAll type=physical
+	command_line	{{ nagios_plugins_dir }}/check_nrpe -H $HOSTADDRESS$ -p {{ nagios_config_commands_nrpe_port }} -c CheckMEM -a MinWarn=$ARG1$ MinCrit=$ARG2$ ShowAll type=physical
 }
