--- a/tasks/plugin_checkwmiplus.yml
+++ b/tasks/plugin_checkwmiplus.yml
@@ -16,6 +16,11 @@
 
 - block: 
   
+  - name: plugin_checkwmiplus | create /root/wmi-1.3.34 directory
+    file: 
+      path: "/root/wmi-1.3.34"
+      state: directory
+
   - name: plugin_checkwmiplus | Uncompress wmi
     unarchive:
       src: "plugin_checkwmiplus/wmi-1.3.14.tar.gz"
@@ -26,6 +31,7 @@
     become: yes
     args:
       creates: "/bin/wmic"
+      chdir: "/root/wmi-1.3.34"
 
 - name: plugin_checkwmiplus | create {{ nagios_plugins_dir_opt }} directory
   file: 
