fix wrong path for wmic client

--- a/tasks/plugin_checkwmiplus.yml
+++ b/tasks/plugin_checkwmiplus.yml
@@ -16,9 +16,9 @@
 
 - block: 
   
-  - name: plugin_checkwmiplus | create /root/wmi-1.3.34 directory
+  - name: plugin_checkwmiplus | create /root/wmi-1.3.14 directory
     file: 
-      path: "/root/wmi-1.3.34"
+      path: "/root/wmi-1.3.14"
       state: directory
 
   - name: plugin_checkwmiplus | Uncompress wmi
@@ -27,11 +27,11 @@
       dest: "/root/wmi-1.3.34"
 
   - name: plugin_checkwmiplus | Compile and install wmic
-    shell: make "CPP=gcc -E -ffreestanding"
+    shell: 'make "CPP=gcc -E -ffreestanding"'
     become: yes
     args:
       creates: "/bin/wmic"
-      chdir: "/root/wmi-1.3.34/wmi-1.3.34"
+      chdir: "/root/wmi-1.3.14/wmi-1.3.14/"
 
 - name: plugin_checkwmiplus | create {{ nagios_plugins_dir_opt }} directory
   file: 
