--- a/tasks/plugin_checkwmiplus.yml
+++ b/tasks/plugin_checkwmiplus.yml
@@ -52,7 +52,7 @@
 - name: plugin_checkwmiplus | configure the commands for checkwmi_plugins
   template:
     src: "{{ item.src }}"
-    dest: '{{ nagios_config_cfg_plugins }}/{{ item.dest }}'
+    dest: "{{ nagios_config_cfg_plugins }}/{{ item.dest }}"
     owner: 'nagios'
     group: 'nagios'
     mode: 0644
