--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,6 +10,8 @@ nagios_config_cfg_dir: "{{ nagios_etc }}/conf.d"
 nagios_config_cfg_plugins: "{{ nagios_config_cfg_dir }}/plugins"
 nagios_plugins_dir: '/usr/lib/nagios/plugins'
 nagios_plugins_dir_opt: '/opt/nagios/bin/plugins' # used by checkwmiplus
+nagios_plugins_USER8_wmi_username: 'Administrator' # used by commands for checkwmiplus
+nagios_plugins_USER9_wmi_password: "SecretPassword" # used by commands for checkwmiplus
 
 nagios_version: 4
 nagios_config_file: "{{ nagios_etc }}/nagios.cfg"
