--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -44,6 +44,23 @@ nagios_plugins_apt_packages:
     - libconfig-inifiles-perl # required for checkwmiplus
     - libdatetime-perl # required for checkwmiplus
 
+# TODO fix names to get it working on redhat based distribution
+nagios_plugins_rh_packages:
+    - git
+    - libnet-dns-perl  # required for check_iftraffic43a.pl
+    - libnagios-plugin-perl # required for hp ilo
+    - libxml-simple-perl # required for hp ilo
+    - php5-sybase # required for check_mssql.php
+    #- update-notifier-common # Required for check_nrpe_os_update (only use it on client ubuntu, doesn't works on debian)
+    - snmp
+    - python-pip
+    - python3-pip
+    - python-dev  # required for m2crypto
+    - nagios-plugins # required for some perl modules /usr/lib/nagios/plugins/utils.pm
+    - libnumber-format-perl # required for checkwmiplus
+    - libconfig-inifiles-perl # required for checkwmiplus
+    - libdatetime-perl # required for checkwmiplus
+
 nagios_plugins_required_pip: "pip>=9.0.1"
 
 nagios_plugins_repos:
