--- a/tasks/config_plugins.yml
+++ b/tasks/config_plugins.yml
@@ -46,7 +46,7 @@
     - skip-ansible-lint
 
 - name: create plugins directory for plugins libs
-  file: 'path={{ nagios_plugins_dir }} owner=root group=root mode=755 state=directory'
+  file: 'path={{ nagios_plugins_dir }} owner=root group=root mode=0755 state=directory'
 
 - name: Install plugins on plugins dir
   copy: 
@@ -54,7 +54,7 @@
     dest: "{{ nagios_plugins_dir }}"
     owner: root 
     group: root 
-    mode: 755
+    mode: u+rwx,g+rx,o+rx
 
 - name: Install plugins from git clone
   git:
