--- a/.travis.yml
+++ b/.travis.yml
@@ -14,16 +14,16 @@ before_install:
   - sudo apt-get install -y -o Dpkg::Options::="--force-confnew" docker-ce
 
 install:
-  - pip install ansible
-  - pip install molecule==1.25.0 # needs to be ported to molecule 2 http://molecule.readthedocs.io/en/latest/porting.html
+  - sudo pip install ansible
+  - sudo pip install molecule==1.25.0 # needs to be ported to molecule 2 http://molecule.readthedocs.io/en/latest/porting.html
   # - pip install required driver (e.g. docker, python-vagrant, shade)
-  - pip install docker
+  - sudo pip install docker
   - ansible-galaxy install -r requirements.yml
 script:
   #- molecule test
-  - molecule create
-  - molecule converge
-  - molecule idempotence
+  - sudo molecule create
+  - sudo molecule converge
+  - sudo molecule idempotence
   #- molecule syntax
 #notifications:
 #    webhooks: https://galaxy.ansible.com/api/v1/notifications/
