--- a/templates/commands/check_curlnagios.cfg
+++ b/templates/commands/check_curlnagios.cfg
@@ -2,5 +2,5 @@
 
 define command{
   	command_name  check_http_curl
-  	command_line  curlnagios --url='$ARG1$' --extra_args='$ARG2$'
+  	command_line  /usr/local/bin/curlnagios --url='$ARG1$' --extra_args='$ARG2$'
 }
