fix command_line for sphealth

--- a/templates/commands/check_sphealth.cfg
+++ b/templates/commands/check_sphealth.cfg
@@ -2,6 +2,5 @@
 
 define command{
   	command_name  check_sphealth
-  	command_line  sphealth -u '$ARG1$' -p '$ARG2$' -s '$ARG3$'
-
+  	command_line  /usr/local/bin/sphealth -u '$ARG1$' -p '$ARG2$' -s '$ARG3$'
 }
