Add curlnagios 0.6.0 with support for azuread

--- a/templates/commands/check_curlnagios.cfg
+++ b/templates/commands/check_curlnagios.cfg
@@ -4,3 +4,8 @@ define command{
   	command_name  check_http_curl
   	command_line  /usr/local/bin/curlnagios --url='$ARG1$' --extra_args='$ARG2$'
 }
+
+define command{
+    command_name  check_http_curl_azuread
+    command_line  /usr/local/bin/curlnagios --url='$ARG1$' --client_id '$ARG2$' --scope '$ARG3$' --client_secret '$ARG4$' --auth_url 'https://login.microsoftonline.com/$ARG5$/oauth2/v2.0/token' --oauth2 --extra_args='$ARG6$'
+}
