--- a/ansible.cfg
+++ b/ansible.cfg
@@ -8,7 +8,11 @@
 # finds first
 
 [defaults]
-roles_path = ../:/etc/ansible/roles
+roles_path = ../:/etc/ansible/roles:~/.ansible/roles
 host_key_checking = False
 
 retry_files_enabled = False
+callback_whitelist = profile_tasks
+
+[ssh_connection]
+pipelining = False
