--- a/tasks/config_plugins.yml
+++ b/tasks/config_plugins.yml
@@ -46,7 +46,7 @@
     - skip-ansible-lint
 
 - name: create plugins directory for plugins libs
-  file: 'path={{ nagios_plugins_dir }} owner=root group=root mode=0755 state=directory'
+  file: 'path={{ nagios_plugins_dir }} owner=root group=root mode="u+rwx,g+rx,o+rx" state=directory'
 
 - name: Install plugins on plugins dir
   copy: 
@@ -65,7 +65,7 @@
   with_items: "{{ nagios_plugins_repos }}"
 
 - name: create plugins directory for commands cfg
-  file: 'path={{ nagios_config_cfg_plugins }} owner=nagios group=nagios mode=775 state=directory'
+  file: 'path={{ nagios_config_cfg_plugins }} owner=nagios group=nagios mode="u+rwx,g+rwx,o+rx" state=directory'
 
 - name: configure the commands for plugins
   template:
@@ -73,7 +73,7 @@
     dest: '{{ nagios_config_cfg_plugins }}/{{ item | basename | regex_replace("\.j2","") }}'
     owner: 'nagios'
     group: 'nagios'
-    mode: 0644
+    mode: "u=rw,g=r,o=r"
   with_fileglob:
     - ../templates/commands/*
 
@@ -85,7 +85,7 @@
     dest: '{{ nagios_config_cfg_plugins }}/{{ item.dest }}'
     owner: 'nagios'
     group: 'nagios'
-    mode: 0644
+    mode: "u=rw,g=r,o=r"
   with_items:
     - { src: 'check_nrpe.cfg.j2', dest: 'check_nrpe.cfg' }
     - { src: 'plugin-check_url_status.cfg.j2', dest: "plugin-check_url_status.cfg" }
