--- a/tasks/multi_os.yml
+++ b/tasks/multi_os.yml
@@ -11,6 +11,10 @@
     - "../vars/{{ ansible_os_family }}.yml"
     - "../vars/defaults.yml"
 
+- name: Include Distribution version specific variables for major_version
+  include_vars: "{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
+  ignore_errors: yes
+
 # If you have doubts to set variables, use:
 # http://pkgs.org
 # And ofcourse any good documentation
