--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -11,3 +11,21 @@ nagios_plugin_checkwmiplus_dependencies:
   - time
   - make
   - wget
+
+# TODO fix names to get it working on redhat based distribution
+nagios_plugins_rh_packages:
+    - git
+    - libnet-dns-perl  # required for check_iftraffic43a.pl
+    - libnagios-plugin-perl # required for hp ilo
+    - libxml-simple-perl # required for hp ilo
+    #- php5-sybase # required for check_mssql.php
+    #- update-notifier-common # Required for check_nrpe_os_update (only use it on client ubuntu, doesn't works on debian)
+    - snmp
+    - python-pip
+    - python3-pip
+    - python-dev  # required for m2crypto
+    - nagios-plugins # required for some perl modules /usr/lib/nagios/plugins/utils.pm
+    - libnumber-format-perl # required for checkwmiplus
+    - libconfig-inifiles-perl # required for checkwmiplus
+    - libdatetime-perl # required for checkwmiplus
+    - net-snmp-python  # required for check_netbotz
