--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -20,10 +20,9 @@ nagios_plugins_apt_packages:
     - php-sybase # required for check_mssql.php
     #- update-notifier-common # Required for check_nrpe_os_update (only use it on client ubuntu, doesn't works on debian)
     - snmp
-    - python2-pip
     - python-pip
     - python3-pip
-    - python2-dev  # required for m2crypto
+    - python-dev  # required for m2crypto
     - python3-dev  # required for m2crypto
     - nagios-plugins # required for some perl modules /usr/lib/nagios/plugins/utils.pm
     - libnumber-format-perl # required for checkwmiplus
