--- a/tasks/config_plugins.yml
+++ b/tasks/config_plugins.yml
@@ -3,13 +3,12 @@
 
 - name: config_plugins | Install Plugins dependencies Debian
   apt: 
-    name: "{{ item }}"
+    name: "{{ nagios_plugins_apt_packages }}"
     state: present
     cache_valid_time: 43200
     #force: yes
   environment:
     DEBIAN_FRONTEND: noninteractive
-  with_items: "{{ nagios_plugins_apt_packages }}"
   when: ansible_os_family == 'Debian'
 
 - name: config_plugins | Install Plugins dependencies RedHat
@@ -18,6 +17,14 @@
     state: present
   with_items: "{{ nagios_plugins_rh_packages }}"
   when: ansible_os_family == 'RedHat'
+
+- name: Remove conflicting packages ubuntu-14
+  apt:
+    name: [ "python-distutils-extra", "python3-distutils-extra" ]
+    state: absent
+  when: 
+    - ansible_facts['distribution'] == "Ubuntu" 
+    - ansible_facts['distribution_major_version'] == "14"
 
 - name: upgrade pip
   command: "pip install {{ nagios_plugins_required_pip }}"
