better handling of multi_os tasks

--- a/tasks/multi_os.yml
+++ b/tasks/multi_os.yml
@@ -12,8 +12,11 @@
     - "../vars/defaults.yml"
 
 - name: Include Distribution version specific variables for major_version
-  include_vars: "{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
-  ignore_errors: yes
+  include_vars: "{{ item }}"
+  with_first_found:
+    - files:
+        - "{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
+      skip: true
 
 # If you have doubts to set variables, use:
 # http://pkgs.org
