--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,18 +3,20 @@ galaxy_info:
   author: Diego Daguerre, Pablo Estigarribia
   description: Install nagios plugins from multiple sources
   license: GPLv2
-  min_ansible_version: 2.0
+  min_ansible_version: 2.5
   # https://galaxy.ansible.com/api/v1/platforms/
   platforms:
   - name: Ubuntu
     versions:
     - trusty
+    - xenial
+    - bionic
   - name: Debian
     versions:
-    - jessie
+    - all
   galaxy_tags:
-  - Monitoring
-  - Infraestructure
+  - monitoring
+  - infraestructure
 allow_duplicates: no
 # Dependencies are only commented due that I prefer to explicit define it on my site.yml
 #dependencies:
