--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -4,3 +4,9 @@
   service:
     name: "{{ nagios_service }}"
     state: reloaded
+  notify: Restart Nagios
+
+- name: Restart Nagios
+  service:
+    name: "{{ nagios_service }}"
+    state: restarted
