--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -18,6 +18,7 @@ nagios_config_file: "{{ nagios_etc }}/nagios.cfg"
 nagios_cgi_file: "{{ nagios_etc }}/cgi.cfg"
 
 nagios_plugins_install_checkwmiplus: False
+nagios_plugins_wmi_version: '1.3.16'
 
 nagios_plugins_pip3_packages:
     - "nagios_sql>=0.8.0"
