--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -24,6 +24,7 @@ nagios_plugins_pip3_packages:
     - "nagios_sql>=0.8.0"
     - "curlnagios>=0.6.0"
     - "sp-health>=0.2.3"
+    - "gurobi-machines-plugin>=0.7.0"
 
 nagios_plugins_pip2_packages:
     - "setuptools>=35.0.2" # required to not fail when using git+https
