--- a/templates/commands/check_hpe_storeonce.cfg
+++ b/templates/commands/check_hpe_storeonce.cfg
@@ -1,5 +1,5 @@
 
-# Oficial HPE Plugins for monitorng storeonce status
+# Plugins for monitorng storeonce status
 
 define command{
        command_name  hardwareCompStatus_python
