--- a/requirements.yml
+++ b/requirements.yml
@@ -5,4 +5,5 @@
 
 - src: geerlingguy.repo-epel
 
-- src: coffeeitworks.ansible_nagios4_server_config
+- src: https://github.com/CoffeeITWorks/ansible_nagios4_server_config.git
+  name: coffeeitworks.ansible_nagios4_server_config
