--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -4,68 +4,55 @@ dependency:
   options:
     ignore-certs: True
     ignore-errors: True
-    role-file: requirements.yml
+    role-file: requirements.yml  # this file is at the root of the git project same place as molecule is executed
 driver:
   name: docker
-lint:
-  name: yamllint
 platforms:
 
-  - name: ansible_test-01
-    image: paulfantom/ubuntu-molecule:16.04
+  - name: ansible_nagios4_server_plugins-01
+    image: "geerlingguy/docker-ubuntu1804-ansible:latest"
     #privileged: True
     command: /sbin/init
+    pre_build_image: true
     capabilities:
-      - SYS_ADMIN    
+      - SYS_ADMIN
+    tmpfs:
+      - /run
+      - /tmp
     volumes:
-      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"        
+      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
     groups:
-      - group1
+      - use_pip_package
 
-  - name: ansible_test-01_2
-    image: paulfantom/ubuntu-molecule:18.04
+  - name: ansible_nagios4_server_plugins-02
+    image: "geerlingguy/docker-debian9-ansible"
     #privileged: True
     command: /sbin/init
+    pre_build_image: true
     capabilities:
-      - SYS_ADMIN    
+      - SYS_ADMIN
+    tmpfs:
+      - /run
+      - /tmp
     volumes:
-      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"        
+      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
     groups:
-      - group1
+      - use_pip_package
 
-#
-#  - name: ansible_test-03
-#    image: centos/systemd 
-#    command: /sbin/init
-#    capabilities:
-#      - SYS_ADMIN
-#    volumes:
-#      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
+  - name: ansible_nagios4_server_plugins-03
+    image: docker.io/pycontribs/centos:7
+    pre_build_image: true
+    command: /sbin/init
+    capabilities:
+      - SYS_ADMIN
+    volumes:
+      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
     #privileged: True
-#    groups:
-#      - group1
+    groups:
+      - use_dev_package
 
 provisioner:
   name: ansible
   config_options:
     defaults:
       callback_whitelist: profile_tasks
-  inventory:
-    group_vars:
-      master:
-        burpsrcext: "zip"
-        burp_version: "master"
-        burp_remove_clients:
-          - name: client_to_remove
-          - name: other_client_to_remove
-        burp_server_port_per_operation_bool: true
-  lint:
-    name: ansible-lint
-
-scenario:
-  name: default
-
-verifier:
-  name: testinfra
-  lint:
-    name: flake8
