--- a/vars/Ubuntu-16.yml
+++ b/vars/Ubuntu-16.yml
@@ -15,7 +15,7 @@ nagios_plugin_checkwmiplus_dependencies:
 nagios_plugins_apt_packages:
     - git
     - libnet-dns-perl  # required for check_iftraffic43a.pl
-    #- libnagios-plugin-perl # required for hp ilo
+    - libnagios-plugin-perl # required for hp ilo
     - libxml-simple-perl # required for hp ilo
     - php-sybase # required for check_mssql.php
     #- update-notifier-common # Required for check_nrpe_os_update (only use it on client ubuntu, doesn't works on debian)
