--- a/templates/commands/plugin-check_ilo2_health.cfg
+++ b/templates/commands/plugin-check_ilo2_health.cfg
@@ -1,11 +1,11 @@
 # Check HP ILO 2/3/4
 define command {
     command_name check_ilo2_health
-    command_line /usr/bin/perl $USER1$/check_ilo2_health.pl --sslopts 'SSL_verify_mode => SSL_VERIFY_NONE, SSL_version => "TLSv1"' -H $ARG1$ -u $ARG2$ -p '$ARG3$' -c -a -b -o -d
+    command_line /usr/bin/perl $USER1$/check_ilo2_health.pl --sslopts 'SSL_verify_mode => SSL_VERIFY_NONE, SSL_version => "TLSv1"' -H $ARG1$ -u $ARG2$ -p '$ARG3$' -O -c -a -b -o -d
 }
 define command {
     command_name check_ilo3_health
-    command_line /usr/bin/perl $USER1$/check_ilo2_health.pl --sslopts 'SSL_verify_mode => SSL_VERIFY_NONE, SSL_version => "TLSv1"' -H $ARG1$ -u $ARG2$ -p '$ARG3$' -c -a -b -o -d --ilo3
+    command_line /usr/bin/perl $USER1$/check_ilo2_health.pl --sslopts 'SSL_verify_mode => SSL_VERIFY_NONE, SSL_version => "TLSv1"' -H $ARG1$ -u $ARG2$ -p '$ARG3$' -O -c -a -b -o -d --ilo3
 }
 
 define command{
