--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,9 @@ before_install:
 
 install:
   - sudo apt-get install -y python-pip libssl-dev libffi-dev
-  - pip install molecule[docker]
+  - pip install ansible
+  - pip install molecule
+  - pip install docker-py
     #- ansible-galaxy install -r requirements.yml
 
 script:
